--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@ body {
   overflow: hidden;
 }
 
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: #9198e5;
+}
+
 #root {
   text-align: center;
   display: flex;
